--- a/css/content.css
+++ b/css/content.css
@@ -1,6 +1,6 @@
 .content-container {
 	display: grid;
-	grid-template-rows: auto auto;
+	grid-template-rows: auto auto auto;
 	position: relative;
 	background-color: #272727;
 	padding-top: 100px;
@@ -30,7 +30,7 @@ header {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	padding-top: 30px;
+	padding: 30px 0 30px 0;
 }
 
 
@@ -112,9 +112,10 @@ header {
 
 .love-icon img {
 	position: absolute;
+	z-index: 10;
 	width: 24px;
 	height: 24px;
-	transition: 0.2s
+	transition: 0.5s;
 }
 
 .love-icon img:hover {
