--- a/css/footer.css
+++ b/css/footer.css
@@ -23,9 +23,24 @@
 
 .social-container {
     position: absolute;
-    display: inline-block;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
     height: 100%; 
-    width:500px;
+    width: 400px;
     right: 0;
     top: 0;
+    z-index: 2;
+}
+
+.social-icon {
+    height: 32px;
+    width: 32px;
+    transition: transform 0.4s;
+}
+
+.social-icon:hover {
+   transform: scale(1.05);
+
 }
