--- a/css/footer.css
+++ b/css/footer.css
@@ -26,7 +26,7 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 40px;
     height: 100%; 
     width: 400px;
     right: 0;
@@ -37,10 +37,9 @@
 .social-icon {
     height: 32px;
     width: 32px;
-    transition: transform 0.4s;
+    transition: 0.6s;
+    padding: 10px;
 }
 
 .social-icon:hover {
-   transform: scale(1.05);
-
-}
+    transform: rotate3d(0, 1, 0.5, 360deg);
