--- a/css/indexpage.css
+++ b/css/indexpage.css
@@ -1,6 +1,6 @@
 .content-container {
 	display: grid;
-	grid-template-rows: auto auto auto;
+	grid-template-rows: auto auto;
 	position: relative;
 	background-color: #272727;
 	padding-top: 100px;
@@ -22,45 +22,6 @@ header {
 	font-weight: 100;
 }
 
-
-.search-container {
-	display: flex;
-	position: absolute;
-	top: 105px;
-	left: 50px;
-	align-items: center;
-	transition: left 0.7s;
-}
-
-
-#search-bar {
-	margin: 0;
-	height: 25px;
-	width: 140px;
-	padding: 0px 15px 0 36px;
-	border: 2px solid #4169E1;
-	background-color: #272727;
-	color: white;
-	border-radius: 20px 20px 20px 20px;
-	outline: none !important;
-	font-size: 16px;
-	font-family: 'Montserrat', sans-serif;
-	transition: width 0.7s;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-}
-
-#search-bar:focus {
-	width: 200px;
-}
-
-#search-icon {
-	position: absolute;
-	width: 20px;
-	height: 20px;
-	left: 10px;
-}
 
 
 /*header section end */
