--- a/css/librarypage.css
+++ b/css/librarypage.css
@@ -1,14 +1,29 @@
 /* Main grid section */
 
 .content-container {
-    padding: 90px 0 0 0;
-    grid-template-rows: auto auto;
+    padding: 80px 0 0 0;
+    grid-template-rows: repeat(4, auto);
     height: auto;
+}
+
+#heading {
+  margin: 10px 0 20px 0;
+  text-align: center;
+  font-size: 22px;
+  font-family: Roboto;
+}
+
+.heading-border {
+  background-color: white;
+  width: 150px;
+  margin: auto;
+  border-radius: 10px;
 }
 
 .film-presentation {
     position: relative;
     display: grid;
+    padding-bottom: 10px;
     grid-template-columns: 40% 60%;
     grid-auto-rows: 380px;
     gap: 10px;
@@ -136,24 +151,24 @@
 }
 
 .carousel-cell {
+    position: relative;
     width: 300px;
     height: 200px;
     margin-right: 10px;
-    background: #8C8;
     border-radius: 5px;
-    counter-increment: gallery-cell;
-}
-
-.carousel-cell.is-selected {
-    background:aqua;
 }
 
 .carousel-cell:before {
     display: block;
-    text-align: center;
-    content: counter(gallery-cell);
-    line-height: 200px;
-    font-size: 80px;
-    color: white;
+}
+
+
+.carousel-image {
+  position: absolute;
+  border-right: 1px solid grey;
+  border-left: 1px solid grey;
+  height: 100%;
+  width: 100%;
+  image-rendering: -webkit-optimize-contrast;
 }
 
